force-app/main/default/objects/GSA_FSO__c/GSA_FSO__c.object-meta.xml
<CustomObject>
    <label>GSA FSO</label>
    <nameField>
        <displayFormat>GSAFSO-{00000}</displayFormat>
        <label>GSA FSO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSA FSOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>