force-app/main/default/objects/GSA_FSO__c/fields/CIW_Accepted_By_COR__c.field-meta.xml
<CustomField>
    <fullName>CIW_Accepted_By_COR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIW Accepted By COR</label>
    <type>Checkbox</type>
</CustomField>