force-app/main/default/objects/GSA_FSO__c/fields/CIW_Complete__c.field-meta.xml
<CustomField>
    <fullName>CIW_Complete__c</fullName>
    <label>CIW Complete</label>
    <type>Date</type>
</CustomField>