force-app/main/default/objects/GSA_FSO__c/fields/CIW_Form_Email_Sent_to_COR__c.field-meta.xml
<CustomField>
    <fullName>CIW_Form_Email_Sent_to_COR__c</fullName>
    <label>CIW Form Email Sent to COR</label>
    <type>Date</type>
</CustomField>