force-app/main/default/objects/GSA_FSO__c/fields/Fingerprint_Email_Received__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint_Email_Received__c</fullName>
    <label>Fingerprint Email Received</label>
    <type>Date</type>
</CustomField>