force-app/main/default/objects/GSA_FSO__c/fields/GSA_Functional_Role__c.field-meta.xml
<CustomField>
    <fullName>GSA_Functional_Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GSA Functional Role</label>
    <referenceTo>GSA_Functional_Role__c</referenceTo>
    <relationshipLabel>GSA FSOs</relationshipLabel>
    <relationshipName>GSA_FSOs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>