force-app/main/default/objects/GSA_FSO__c/fields/GSA_Project__c.field-meta.xml
<CustomField>
    <fullName>GSA_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GSA Project</label>
    <referenceTo>GSA_Project__c</referenceTo>
    <relationshipLabel>GSA FSOs</relationshipLabel>
    <relationshipName>GSA_FSOs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>