force-app/main/default/objects/GSA_FSO__c/fields/NDA_Accepted_By_COR__c.field-meta.xml
<CustomField>
    <fullName>NDA_Accepted_By_COR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Accepted By COR</label>
    <type>Checkbox</type>
</CustomField>