force-app/main/default/objects/GSA_FSO__c/fields/NDA_Received__c.field-meta.xml
<CustomField>
    <fullName>NDA_Received__c</fullName>
    <label>NDA Received</label>
    <type>Date</type>
</CustomField>