force-app/main/default/objects/GSA_FSO__c/fields/NDA_Sent_to_COR__c.field-meta.xml
<CustomField>
    <fullName>NDA_Sent_to_COR__c</fullName>
    <label>NDA Sent to COR</label>
    <type>Date</type>
</CustomField>