force-app/main/default/objects/GSA_FSO__c/fields/Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Stage__c</fullName>
    <label>Onboarding Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Initiated</fullName>
            </value>
            <value>
                <fullName>CIW</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Fingerprinting</fullName>
            </value>
            <value>
                <fullName>Supplemental Forms</fullName>
            </value>
            <value>
                <fullName>eQIP</fullName>
            </value>
            <value>
                <fullName>Badging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>