force-app/main/default/objects/GSA_FSO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>GSA_Project__c</columns>
    <columns>Onboarding_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>